NEXT-1210 - Add reload button in media sidebar

--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
@@ -90,7 +90,7 @@
                 {% endblock %}
 
                 <template slot="card-view-sidebar">
-                    <sw-sidebar-media-item>
+                    <sw-sidebar-media-item ref="sidebarMediaItem">
                         <template slot="context-menu-items" slot-scope="media">
                             <sw-context-menu-item @click="setMediaItem(media.mediaItem)">
                                 {{ $tc('sw-manufacturer.detail.labelUseAsLogo') }}
